@@ -236,7 +236,7 @@ class SC_t3lib_thumbs {
 					} else {
 						$colors = ($sizeMax>56)?'-colors 64':'-colors 16';
 					}
-					$parameters = '-sample '.$this->size.' '.$colors.' '.$this->wrapFileName($this->input.'[0]').' '.$this->wrapFileName($this->output);
+					$parameters = '-sample '.$this->size.' '.$colors.' '.$this->wrapFileName($this->input).'[0] '.$this->wrapFileName($this->output);
 					$cmd = t3lib_div::imageMagickCommand('convert', $parameters);
 					exec($cmd);
 					if (!@file_exists($this->output))	{
